generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  teacher
  student
  parent
}

enum IdentityProvider {
  google
}

enum ProfileAccessKind {
  owner
  guardian
}

enum HomeworkStatus {
  assigned
  submitted
  approved
  rejected
}

enum LessonType {
  online
  offline
}

enum TestType {
  mock
  exam
  quiz
  other
}

enum GardenItemType {
  tree
  bush
  flower
  cherry
  big_tree
  bamboo
  mushroom
}

enum HomeworkEventType {
  submitted
  approved
  rejected
}

model User {
  id              String    @id @default(uuid())
  email           String    @unique
  name            String
  role            Role
  password        String
  lineUserId      String?   @unique
  meetLink        String?
  agreedToTermsAt DateTime? @db.Timestamptz(3)
  createdAt       DateTime  @default(now()) @db.Timestamptz(3)

  // teacher relations
  students        Student[]         @relation("TeacherStudents")
  inviteTokens    InviteToken[]
  subjects        Subject[]
  homeworksGiven  Homework[]        @relation("TeacherHomework")
  gradesGiven     GradeRecord[]     @relation("TeacherGrades")
  lessonsGiven    Lesson[]          @relation("TeacherLessons")
  materialsGiven  StudentMaterial[] @relation("TeacherMaterials")
  examEventsGiven ExamEvent[]       @relation("TeacherExamEvents")
  monthlyPayments MonthlyPayment[]  @relation("TeacherPayments")

  // student relation
  studentProfile Student? @relation("StudentUser")

  // parent relations
  parentLinks        ParentStudent[]     @relation("ParentLinks")
  teacherParentLinks ParentStudent[]     @relation("TeacherParentLinks")
  parentInviteTokens ParentInviteToken[]

  lineLinkToken       LineLinkToken?
  identityAccesses    IdentityAccess[]
  identityLinkIntents IdentityLinkIntent[]
}

// 外部IdPの本人情報。メールアドレスではなく providerSubject (Google sub) を識別子にする。
model AuthIdentity {
  id              String           @id @default(uuid())
  provider        IdentityProvider
  providerSubject String
  emailAtLink     String?
  emailVerified   Boolean          @default(false)
  lastLoginAt     DateTime?        @db.Timestamptz(3)
  createdAt       DateTime         @default(now()) @db.Timestamptz(3)
  updatedAt       DateTime         @updatedAt @db.Timestamptz(3)
  accesses        IdentityAccess[]

  @@unique([provider, providerSubject])
}

// 1つのGoogle IDが複数プロフィールを扱えるよう、本人情報とUserを分離する。
model IdentityAccess {
  id         String            @id @default(uuid())
  identityId String
  userId     String
  kind       ProfileAccessKind @default(owner)
  isDefault  Boolean           @default(false)
  createdAt  DateTime          @default(now()) @db.Timestamptz(3)

  identity AuthIdentity @relation(fields: [identityId], references: [id], onDelete: Cascade)
  user     User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([identityId, userId])
  @@index([userId])
}

// ログイン中の利用者が開始した明示的なGoogle連携だけを許可するための短期トークン。
model IdentityLinkIntent {
  id        String   @id @default(uuid())
  tokenHash String   @unique
  userId    String
  expiresAt DateTime @db.Timestamptz(3)
  createdAt DateTime @default(now()) @db.Timestamptz(3)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([expiresAt])
}

model AuthAuditLog {
  id         String   @id @default(uuid())
  event      String
  userId     String?
  identityId String?
  createdAt  DateTime @default(now()) @db.Timestamptz(3)

  @@index([userId, createdAt])
  @@index([identityId, createdAt])
}

model LineLinkToken {
  id        String   @id @default(uuid())
  userId    String   @unique
  token     String   @unique
  expiresAt DateTime @db.Timestamptz(3)
  createdAt DateTime @default(now()) @db.Timestamptz(3)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Student {
  id                   String   @id @default(uuid())
  userId               String   @unique
  teacherId            String
  grade                String
  gardenGeneration     Int      @default(1)
  defaultHourlyRate    Int?
  defaultTravelExpense Int?
  defaultDurationMin   Int?
  defaultSubjectIds    String[] @default([])
  createdAt            DateTime @default(now()) @db.Timestamptz(3)

  user    User @relation("StudentUser", fields: [userId], references: [id], onDelete: Cascade)
  teacher User @relation("TeacherStudents", fields: [teacherId], references: [id])

  homeworks          Homework[]
  grades             GradeRecord[]
  lessons            Lesson[]
  materials          StudentMaterial[]
  examEvents         ExamEvent[]
  gardenItems        GardenItem[]
  monthlyPayments    MonthlyPayment[]
  parentLinks        ParentStudent[]
  parentInviteTokens ParentInviteToken[]

  @@index([teacherId])
}

model InviteToken {
  id        String    @id @default(uuid())
  token     String    @unique @default(uuid())
  teacherId String
  email     String?
  name      String
  grade     String
  usedAt    DateTime? @db.Timestamptz(3)
  expiresAt DateTime  @db.Timestamptz(3)
  createdAt DateTime  @default(now()) @db.Timestamptz(3)

  teacher User @relation(fields: [teacherId], references: [id], onDelete: Cascade)

  @@index([teacherId])
  @@index([expiresAt])
}

model ParentStudent {
  id        String   @id @default(uuid())
  parentId  String
  studentId String
  teacherId String
  createdAt DateTime @default(now()) @db.Timestamptz(3)

  parent  User    @relation("ParentLinks", fields: [parentId], references: [id], onDelete: Cascade)
  student Student @relation(fields: [studentId], references: [id], onDelete: Cascade)
  teacher User    @relation("TeacherParentLinks", fields: [teacherId], references: [id])

  @@unique([parentId, studentId])
  @@index([studentId])
  @@index([teacherId])
}

model ParentInviteToken {
  id        String    @id @default(uuid())
  token     String    @unique @default(uuid())
  teacherId String
  studentId String
  email     String?
  usedAt    DateTime? @db.Timestamptz(3)
  expiresAt DateTime  @db.Timestamptz(3)
  createdAt DateTime  @default(now()) @db.Timestamptz(3)

  teacher User    @relation(fields: [teacherId], references: [id], onDelete: Cascade)
  student Student @relation(fields: [studentId], references: [id], onDelete: Cascade)

  @@index([studentId])
  @@index([teacherId])
  @@index([expiresAt])
}

model Subject {
  id        String   @id @default(uuid())
  name      String
  color     String?
  teacherId String
  createdAt DateTime @default(now()) @db.Timestamptz(3)

  teacher User @relation(fields: [teacherId], references: [id], onDelete: Cascade)

  @@unique([name, teacherId])
  @@index([teacherId])
}

model Homework {
  id               String         @id @default(uuid())
  studentId        String
  teacherId        String
  title            String
  description      String?
  dueDate          DateTime       @db.Timestamptz(3)
  subjectIds       String[]
  materialId       String?
  status           HomeworkStatus @default(assigned)
  studentNote      String?
  difficultyRating Int?
  teacherFeedback  String?
  requiresPhoto    Boolean        @default(false)
  photoUrl         String?
  submittedAt      DateTime?      @db.Timestamptz(3)
  reviewedAt       DateTime?      @db.Timestamptz(3)
  feedbackSeenAt   DateTime?      @db.Timestamptz(3)
  createdAt        DateTime       @default(now()) @db.Timestamptz(3)

  student  Student          @relation(fields: [studentId], references: [id], onDelete: Cascade)
  teacher  User             @relation("TeacherHomework", fields: [teacherId], references: [id], onDelete: Cascade)
  material StudentMaterial? @relation(fields: [materialId], references: [id], onDelete: SetNull)
  events   HomeworkEvent[]

  @@index([studentId, status])
  @@index([teacherId, status])
  @@index([dueDate])
}

model HomeworkEvent {
  id         String            @id @default(uuid())
  homeworkId String
  eventType  HomeworkEventType
  actorName  String
  note       String?
  createdAt  DateTime          @default(now()) @db.Timestamptz(3)

  homework Homework @relation(fields: [homeworkId], references: [id], onDelete: Cascade)

  @@index([homeworkId])
}

model GradeRecord {
  id                      String   @id @default(uuid())
  studentId               String
  teacherId               String
  testName                String
  date                    DateTime @db.Timestamptz(3)
  subjectIds              String[]
  score                   Int?
  maxScore                Int?
  rank                    Int?
  totalStudents           Int?
  deviation               Float?
  testType                TestType @default(other)
  avgScore                Int?
  teacherRating           Int?
  comment                 String?
  gardenEvaluationVersion Int      @default(0)
  createdAt               DateTime @default(now()) @db.Timestamptz(3)

  student    Student     @relation(fields: [studentId], references: [id], onDelete: Cascade)
  teacher    User        @relation("TeacherGrades", fields: [teacherId], references: [id], onDelete: Cascade)
  gardenItem GardenItem?

  @@index([studentId])
  @@index([teacherId, testType])
  @@index([date])
}

model Lesson {
  id              String     @id @default(uuid())
  teacherId       String
  studentId       String
  date            DateTime   @db.Timestamptz(3)
  durationMin     Int?
  type            LessonType @default(online)
  notes           String?
  lessonLog       String?
  lessonLogPublic Boolean    @default(false)
  lessonLogSeenAt DateTime?  @db.Timestamptz(3)
  subjectIds      String[]   @default([])
  hourlyRate      Int?
  travelExpense   Int?
  completedAt     DateTime?  @db.Timestamptz(3)
  qstashMessageId String?
  reminderSentAt  DateTime?  @db.Timestamptz(3)
  createdAt       DateTime   @default(now()) @db.Timestamptz(3)

  teacher User    @relation("TeacherLessons", fields: [teacherId], references: [id], onDelete: Cascade)
  student Student @relation(fields: [studentId], references: [id], onDelete: Cascade)

  @@index([teacherId, date])
  @@index([studentId, date])
}

model ExamEvent {
  id        String    @id @default(uuid())
  studentId String
  teacherId String
  name      String
  date      DateTime  @db.Timestamptz(3)
  endDate   DateTime? @db.Timestamptz(3)
  testType  TestType  @default(exam)
  createdAt DateTime  @default(now()) @db.Timestamptz(3)

  student Student @relation(fields: [studentId], references: [id], onDelete: Cascade)
  teacher User    @relation("TeacherExamEvents", fields: [teacherId], references: [id], onDelete: Cascade)

  @@index([studentId])
  @@index([date])
  @@index([teacherId, date])
}

model GardenItem {
  id            String         @id @default(uuid())
  studentId     String
  x             Int
  y             Int
  itemType      GardenItemType
  sourceGradeId String?        @unique
  createdAt     DateTime       @default(now()) @db.Timestamptz(3)

  student     Student      @relation(fields: [studentId], references: [id], onDelete: Cascade)
  sourceGrade GradeRecord? @relation(fields: [sourceGradeId], references: [id], onDelete: Cascade)

  @@unique([studentId, x, y])
}

model StudentMaterial {
  id         String   @id @default(uuid())
  studentId  String
  teacherId  String
  name       String
  note       String?
  subjectIds String[] @default([])
  createdAt  DateTime @default(now()) @db.Timestamptz(3)

  student   Student    @relation(fields: [studentId], references: [id], onDelete: Cascade)
  teacher   User       @relation("TeacherMaterials", fields: [teacherId], references: [id], onDelete: Cascade)
  homeworks Homework[]

  @@index([studentId])
  @@index([teacherId])
}

model MonthlyPayment {
  id        String    @id @default(uuid())
  teacherId String
  studentId String
  year      Int
  month     Int
  dueDate   DateTime? @db.Timestamptz(3)
  paidAt    DateTime? @db.Timestamptz(3)
  createdAt DateTime  @default(now()) @db.Timestamptz(3)

  teacher User    @relation("TeacherPayments", fields: [teacherId], references: [id], onDelete: Cascade)
  student Student @relation(fields: [studentId], references: [id], onDelete: Cascade)

  @@unique([teacherId, studentId, year, month])
  @@index([studentId])
}
